[gd_scene load_steps=10 format=2]

[ext_resource path="res://scripts/entity/Combine.gd" type="Script" id=1]
[ext_resource path="res://sprites/karakter/BicerDover.png" type="Texture" id=2]
[ext_resource path="res://particles/Combine_hasat_particle.tres" type="Material" id=3]
[ext_resource path="res://audio/sfx/combine_motor.wav" type="AudioStream" id=4]
[ext_resource path="res://audio/sfx/harvest_death.wav" type="AudioStream" id=5]

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 48, 24 )

[sub_resource type="Curve" id=6]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0.679545 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=7]
curve = SubResource( 6 )

[sub_resource type="ParticlesMaterial" id=8]
emission_shape = 2
emission_box_extents = Vector3( 24, 1, 1 )
flag_disable_z = true
direction = Vector3( 0, -1, 0 )
spread = 15.0
gravity = Vector3( 0, 98, 0 )
initial_velocity = 32.0
angular_velocity = 71.29
angular_velocity_random = 0.36
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 4.0
scale_curve = SubResource( 7 )
color = Color( 0.454902, 0.247059, 0.223529, 1 )
hue_variation = 0.2
hue_variation_random = 0.5

[node name="Combine" type="Area2D"]
position = Vector2( 240, -120 )
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -12 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 4 )

[node name="TozToprak" type="Particles2D" parent="."]
position = Vector2( -13, 17 )
amount = 32
lifetime = 0.75
local_coords = false
process_material = SubResource( 8 )

[node name="Hasat" type="Particles2D" parent="."]
position = Vector2( -46, -17 )
amount = 64
lifetime = 1.6
process_material = ExtResource( 3 )

[node name="Motor" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )
autoplay = true
max_distance = 4000.0
attenuation = 16.0
bus = "Ingame"

[node name="harvest_death" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )
volume_db = -5.0
max_distance = 2400.0
attenuation = 12.0
bus = "Ingame"

[connection signal="area_entered" from="." to="." method="_on_Combine_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_Combine_body_entered"]
